Pictures till half of setup

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -36,6 +36,7 @@
 \usepackage[numbers, sort&compress]{natbib}
 \usepackage{multirow}
 \usepackage{array}
+\usepackage{subcaption}
 
 % \usepackage{lmodern}
 %------------------------------------------------------------------------------
