--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -284,7 +284,7 @@ The low interaction cross-section ($\sigma_{\nu}$)~\cite{Formaggio_2012} of neut
 \end{subequations}
 
 The products from the CC and NC interaction i.e. a lepton and a hadron can be detected in multiple ways. 
-Antineutrinos can also interact with atomic electrons leading to a $W^-$ boson production called the Glashow resonance~\cite{PhysRev.118.316}. The threshold antineutrino energy for such a reaction to occur is $\sim$6.3 PeV. This process dominates the CC and NC interaction albeit only in a small energy range. Proposed in 1959, it was first observed at the IceCube Observatory~\cite{IceCube:2021rpz}. Both CC and NC when interacting with the Nucleon undergo Neutrino-Nucleon Deep Inelastic scattering (DIS) where the interacting neutrino scatters off individual quarks inside nucleons (protons or neutrons), leading to the fragmentation of the nucleon and the creation of hadrons(Particles made of quarks). At low center-of-mass energies($\sim$TeV) accelerators can provide most of the information about the neutrino interaction with matter and the corresponding cross-section but at energies this estimation can either only be calculated via the detection of astrophysical and cosmogenic neutrinos or via a robust theoretical estimation based on quantum chromodynamics(QCD). The description of QCD at such high energies is still not completely understood, Moreover, physics beyond the Standard Model can also be introduced for these energies which can further affect the neutrino cross-section estimation~\cite{PhysRevD.107.033009}. For the purpose of this thesis, the neutrino cross-sections calculated in ~\cite{Cooper_Sarkar_2011} are used. ~\cite{Cooper_Sarkar_2011} provides an updated $\nu -N$ cross-section calculations with corresponding uncertainties, taking into account the full HERA~\cite{aaron2010combined} data release and combining it with the DGLAP~\cite{ALTARELLI1977298,Dokshitzer:1977sg,Gribov:427157} formalism of QCD. Based on the expected flux the cross-section and the energy of neutrinos it is easy to calculate minimum detector sizes for high-energy neutrinos. For example, for a neutrino of energy $E_{\nu} \sim 1PeV = 10^{15} eV $, the expected flux is $\frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{cm^2 \times 10^5 yr}$, the cross-section is $\sigma_{\nu N} \sim 10^{-8} , \sigma_{pp} \sim 10^{-33}$ and the targets can be estimated as $ N_N \sim N_A \times V/cm^3$ where $N_A$ is the Avogadro's number then the rate of expected events is given by:
+Antineutrinos can also interact with atomic electrons leading to a $W^-$ boson production called the Glashow resonance~\cite{PhysRev.118.316}. The threshold antineutrino energy for such a reaction to occur is $\sim$6.3 PeV. This process dominates the CC and NC interaction albeit only in a small energy range. Proposed in 1959, it was first observed at the IceCube Observatory~\cite{IceCube:2021rpz}. Both CC and NC when interacting with the Nucleon undergo Neutrino-Nucleon Deep Inelastic scattering (DIS) where the interacting neutrino scatters off individual quarks inside nucleons (protons or neutrons), leading to the fragmentation of the nucleon and the creation of hadrons(Particles made of quarks). At low center-of-mass energies($\sim$TeV) accelerators can provide most of the information about the neutrino interaction with matter and the corresponding cross-section but at energies this estimation can either only be calculated via the detection of astrophysical and cosmogenic neutrinos or via a robust theoretical estimation based on quantum chromodynamics (QCD). The description of QCD at such high energies is still not completely understood, Moreover, physics beyond the Standard Model can also be introduced for these energies which can further affect the neutrino cross-section estimation~\cite{PhysRevD.107.033009}. For the purpose of this thesis, the neutrino cross-sections calculated in ~\cite{Cooper_Sarkar_2011} are used. ~\cite{Cooper_Sarkar_2011} provides an updated $\nu -N$ cross-section calculations with corresponding uncertainties, taking into account the full HERA~\cite{aaron2010combined} data release and combining it with the DGLAP~\cite{ALTARELLI1977298,Dokshitzer:1977sg,Gribov:427157} formalism of QCD. Based on the expected flux the cross-section and the energy of neutrinos it is easy to calculate minimum detector sizes for high-energy neutrinos. For example, for a neutrino of energy $E_{\nu} \sim 1PeV = 10^{15} eV $, the expected flux is $\frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{cm^2 \times 10^5 yr}$, the cross-section is $\sigma_{\nu N} \sim 10^{-8} , \sigma_{pp} \sim 10^{-33}$ and the targets can be estimated as $ N_N \sim N_A \times V/cm^3$ where $N_A$ is the Avogadro's number then the rate of expected events is given by:
 
 \begin{equation}
   N_{\nu} \sim N_N \times \sigma_{\nu N} \times \frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{yr} \times \frac{V}{1km^3}
@@ -309,6 +309,13 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
   \item $-$ \textbf{Air Shower Detectors}: Even though, the typical interaction lengths of UHE$\nu_s$ are way larger than the atmospheric depth the neutrinos can still induce an EAS. Such EASs develop deep into the atmosphere in comparison to cosmic rays offering a distinguishing aspect for detection at cosmic ray observatories like the Pierre Auger Observatory. Pierre Auger Observatory tries to use the said property to observe EeV neutrinos. EASs and the expected signature at the Pierre Auger Observatory for both cosmic rays and neutrinos are discussed in the next Chapter~\ref{chap:EAS}.   
 
   \end{description}
+
+  \begin{figure}[t!]
+    \centering
+    \includegraphics[width=14.5cm]{thesis_figures/CRnNu/UHE_nu_techniques.png}
+    \caption{Different detection techniques for UHE neutrinos~\cite{Arguelles:2024xkx}}
+    \label{fig:UHE-nu-techniques}
+  \end{figure}
 
 \subsection{Latest results}
   \label{subsec:Nuresults}
@@ -383,23 +390,23 @@ Combining the various messengers via which we can see the Universe can help bett
 \label{tab:Multimessenger}
 \end{table}
 
-%For later use in other chapter?????
 % \begin{figure}[t!]
-% \centering
-%   \begin{minipage}[t]{.45\textwidth}
-%     \centering
-%     \includegraphics[width=\textwidth]{thesis_figures/exclusion_invisible.png}
-%     \caption{Current limits for invisible mode for 90\% C.L. exclusion region in the ($m_{A'},\epsilon$) plane ~\cite{}.}
-%     \label{fig:exclusion_invisible}
-%   \end{minipage}
-%   \hfill
-%   \begin{minipage}[t]{.45\textwidth}
-%     \centering
-%     \includegraphics[width=\linewidth]{thesis_figures/exclusion_visible_latest.png}
-%     \caption{Current limits for invisible mode for 90\% C.L. exclusion region in the ($m_{A'},\epsilon$) plane. The blue plane is with 2017 data and the dotted line is with 2017+2018 data for NA64. The red line is the region that might explain the X17 boson~\cite{}.}
-%     \label{fig:exclusion_visible}
-%   \end{minipage}
-% \end{figure}
+%   \centering
+%     \begin{minipage}[t]{.45\textwidth}
+%       \centering
+%       \includegraphics[width=\textwidth]{thesis_figures/Setup/FD_outside_drawing.png}
+%       \caption{As artistic drawing inspired by the FD building at Los Leones.}
+%       \label{fig:FD_sketch}
+%     \end{minipage}
+%     \hfill
+%     \begin{minipage}[t]{.45\textwidth}
+%       \centering
+%       \includegraphics[width=\linewidth]{thesis_figures/exclusion_visible_latest.png}
+%       \caption{Current limits for invisible mode for 90\% C.L. exclusion region in the ($m_{A'},\epsilon$) plane. The blue plane is with 2017 data and the dotted line is with 2017+2018 data for NA64. The red line is the region that might explain the X17 boson~\cite{}.}
+%       \label{fig:exclusion_visible}
+%     \end{minipage}
+%   \end{figure}
+
 
 
 %%% Local Variables:
