--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -1008,6 +1008,13 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   year      = {2018},
   month     = feb
 }
+@article{article_2001_kampert,
+  author = {Kampert, Karl-Heinz and Antoni, Tamara and Badea, Aurelian and Bollmann, E. and Bozdog, H. and Uttner, C. and Daumiller, K. and Engler, J. and Haungs, Andreas and Heck, Derek},
+  year   = {2001},
+  month  = {07},
+  pages  = {},
+  title  = {Cosmic Rays In The Energy Range Of The Knee}
+}
 @article{universe8110579,
   author         = {The Pierre Auger Collaboration},
   title          = {Searches for Ultra-High-Energy Photons at the Pierre Auger Observatory},
@@ -1766,6 +1773,15 @@ abstract = {In this paper we review air shower data related to the mass composit
   number        = {10},
   pages         = {102006},
   year          = {2021}
+}
+@article{Arguelles:2024xkx,
+  author        = {Arg\"uelles, C. A. and Halzen, F. and Kurahashi, N.},
+  title         = {{From the Dawn of Neutrino Astronomy to A New View of the Extreme Universe}},
+  eprint        = {2405.17623},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ex},
+  month         = {5},
+  year          = {2024}
 }
 @article{Aartsen_2014_first_flux,
   author        = {Aartsen, M. G. and others},
@@ -2548,11 +2564,38 @@ abstract = {The Pierre Auger Cosmic-Ray Observatory uses the earth's atmosphere 
   pages         = {1563--1569},
   year          = {2012}
 }
+@misc{gap_note_2009,
+  title  = {Proposition to improve the local trigger of the Surface Detector for low energy showers},
+  url    = {https://www.auger.org/gap-notes/},
+  author = {Pierre Billoir},
+  year   = {2009}
+}
 @misc{gap_note_2011,
   title  = {New proposal to improve local trigger of the Surface Detector},
   url    = {https://www.auger.org/gap-notes/},
   author = {Pierre Billoir},
   year   = {2011}
+}
+@article{PierreAuger:2021hun,
+  author        = {Abreu, P. and others},
+  collaboration = {Pierre Auger},
+  title         = {{The energy spectrum of cosmic rays beyond the turn-down around $10^{17}$ eV as measured with the surface detector of the Pierre Auger Observatory}},
+  eprint        = {2109.13400},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  reportnumber  = {FERMILAB-PUB-21-474-AD-AE-SCD-TD},
+  doi           = {10.1140/epjc/s10052-021-09700-w},
+  journal       = {Eur. Phys. J. C},
+  volume        = {81},
+  number        = {11},
+  pages         = {966},
+  year          = {2021}
+}
+@misc{gap_note_2017,
+  title  = {The Station Triggering Efficiency Using the New Triggers},
+  url    = {https://www.auger.org/gap-notes/},
+  author = {Alan Coleman, Piera Ghia, Miguel Mostafa},
+  year   = {2017}
 }
 @article{PierreAuger:2021nnx,
   author        = {Abreu, Pedro and others},
