--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -9,26 +9,41 @@ As mentioned in the previous chapter An Extensive Air Shower (EAS) is a cascade 
 
 \section{Development}
 \label{sec:EAS_dev}
-As the CR particle which is predominantely a proton collides with the nuclei of the atmosphere ($N_2, O_2 $etc.) it produces pions and a few kaons. The neutral pions produced immediately decay to pairs of photons which in turn produce electrons via the process of pair-production. These electrons can then further produce photons via bremsstrahlung initiating a chain reaction which alternates between these two processes and forms the \textit{electromagnetic component} of the shower. The charged pions can survive for a while but eventually decay to muon and a corresponding anti neutrino. These muons can either survive till the shower reaches the ground and form the \textit{muonic component} or can also decay to electron thus contributing to the electromagnetic part. The neutrinos due to their low interaction cross-section mostly survive till they reach the ground and even further. Though not causing any problem for an EAS detector such neutrinos are the biggest background for a neutrino telescope. Kaons and charged pions due to their long lifetimes can also interact with the atmospheric nuclei producing additional pions which form the \textit{hadronic component} of the shower. The hadronic component can further contribute to both the electromagnetic and muonic component as more the shower propagates lesser the overall hadronic component becomes. A schematic of all the reactions with the different components is presented in fig~\ref{}.
 
-To understand the cascade of particles a detailed modelling of each component is required. These models help extract the basic properties of the cascade. A simplified model describing the electromagnetic component called the Heitler's toy model, its hadronic extension and a generalised cascade equation are all discussed below. The specific development of a neutrino induced EAS is also discussed.  
+\begin{figure}[t!]
+    \centering
+    \includegraphics[width=14.5cm]{thesis_figures/EAS/Air_shower_reactions_redo.png}
+    \caption{Development of Extensive Air Shower. The figure shows the different components of an EAS and the reactions which lead to their formation. The figure is adapted from Sonja's Thesis, redo to make own}
+    \label{fig:EAS_components}
+\end{figure}
+
+As the CR particle which is predominantly a proton collides with the nuclei of the atmosphere ($N_2, O_2 $etc.) it produces pions and a few kaons. The neutral pions produced immediately decay to pairs of photons which in turn produce electrons via the process of pair-production. These electrons can then further produce photons via bremsstrahlung initiating a chain reaction which alternates between these two processes and forms the \textit{electromagnetic component} of the shower. The charged pions can survive for a while but eventually decay to muon and a corresponding anti neutrino. These muons can either survive till the shower reaches the ground and form the \textit{muonic component} or can also decay to electron thus contributing to the electromagnetic part. The neutrinos due to their low interaction cross-section mostly survive till they reach the ground and even further. Though not causing any problem for an EAS detector such neutrinos are the biggest background for a neutrino telescope. Kaons and charged pions due to their long lifetimes can also interact with the atmospheric nuclei producing additional pions which form the \textit{hadronic component} of the shower. The hadronic component can further contribute to both the electromagnetic and muonic component as more the shower propagates lesser the overall hadronic component becomes. A schematic of all the reactions with the different components is presented in fig~\ref{fig:EAS_components}.
+
+To understand the cascade of particles a detailed modelling of each component is required. These models help extract the basic properties of the cascade. A simplified model describing the electromagnetic component called the Heitler's toy model, its hadronic extension and a generalized cascade equation are all discussed below. The specific development of a neutrino induced EAS is also discussed.  
+\begin{figure}[t!]
+    \centering
+    \includegraphics[width=14.5cm]{thesis_figures/EAS/Toy_mode_redo.png}
+    \caption{Representation of Heitler's model for (a) electromagnetic cascades and (b) hadronic cascades.} 
+    \label{fig:EAS_toy_model}
+\end{figure}
+
 
 \subsection{Heitler's Toy Model}
 \label{sec:Dev_Heitler}
 
-Proposed by Heitler in 1954~\cite{heitler1984quantum}, Heitler's Toy Model is a simplified perfect binary tree to understand and model an EAS development. The model characterises an EAS as a perfect binary tree. In such a scenario all particles produced in a shower equally share the primary energy available at the time of their creation. At each step, which has a fixed size related to radiation length of the medium $\lambda$, the number of particles are supposed to be doubled, with each having the same energy. The energy loses which may occur due to collisions are completely ignored. The shower development or splitting process is supposed to continue till a critical point where the energy required to create more particles becomes the same as energy lost by particles in the medium. At the critical point, the shower has the maximum number of particles given by, $N_{max} = E_0/E_c$, which is the ratio of the original energy ($E_0$) to the critical energy ($E_c$). After this point the shower keeps getting absorbed in the atmosphere. The radiation length at this point is called the shower maximum denoted by $X_{max}$. This can be calculated to be $X_{max} = X_0 + \lambda_r ln(E_0/E_c)$ where $X_0$ is the first interaction point in the atmosphere. A visualisation of the shower development according to the Heitler's model is shown in fig~\ref{}.
+Proposed by Heitler in 1954~\cite{heitler1984quantum}, Heitler's Toy Model is a simplified perfect binary tree to understand and model an EAS development. The model characterises an EAS as a perfect binary tree. In such a scenario all particles produced in a shower equally share the primary energy available at the time of their creation. At each step, which has a fixed size related to radiation length of the medium $\lambda$, the number of particles are supposed to be doubled, with each having the same energy. The energy loses which may occur due to collisions are completely ignored. The shower development or splitting process is supposed to continue till a critical point where the energy required to create more particles becomes the same as energy lost by particles in the medium. At the critical point, the shower has the maximum number of particles given by, $\mathrm{N_{max} = E_0/E_c}$, which is the ratio of the original energy ($\mathrm{E_0}$) to the critical energy ($E_c$). After this point the shower keeps getting absorbed in the atmosphere. The radiation length at this point is called the shower maximum denoted by $\mathrm{X_{max}}$. This can be calculated to be $\mathrm{X_{max} = X_0 + \lambda_r ln(E_0/E_c)}$ where $X_0$ is the first interaction point in the atmosphere. A visualisation of the shower development according to the Heitler's model is shown in fig~\ref{fig:EAS_toy_model}.
 
-Such a simplified model works quite well for estimating the properties of the electromagnetic cascades although the $N_{max}$ estimations do not match perfectly. The reason for this is the difference in the energy loss values for electrons and photons. For hadronic cascades an extension to the model was made. Other important properties of the shower such as lateral and longitudinal spread, also require taking into account the emittance direction and losses due to collision which are not taken into account for a simplified model. These are discussed in sec~\ref{sec:EAS_cha}. Even with its shortcomings the Heitler model gives a very good estimation for electromagnetic cascades and helps clearly categorise an air shower into three phases, the growth phase, the critical point phase and the tail phase. 
+Such a simplified model works quite well for estimating the properties of the electromagnetic cascades although the $N_{max}$ estimations do not match perfectly. The reason for this is the difference in the energy loss values for electrons and photons. For hadronic cascades an extension to the model was made. Other important properties of the shower such as lateral and longitudinal spread, also require taking into account the emittance direction and losses due to collision which are not taken into account for a simplified model. These are discussed in sec.~\ref{sec:EAS_cha}. Even with its shortcomings the Heitler model gives a very good estimation for electromagnetic cascades and helps clearly categorise an air shower into three phases, the growth phase, the critical point phase and the tail phase. 
 
 \subsection{Hadronic Extension}
 \label{sec:Dev_Had}
-The Heitler model was extended by Matthews~\cite{MATTHEWS2005387} to characterise the hadronic cascades in an EAS. In his approximation when a hadron with Energy E interacts with a nucleon the total particles produced have a two-third charged component ($\pi^\pm $) and a one-third neutral component ($\pi^0$) with the initial energy equally divided based on the number fraction. The neutral component decays quickly and contributes its share of energy to the electromagnetic component. The charged hadrons, provided they have not reached their critical energy in air ($\sim$20 GeV), interact again repeating the initial process. Muons are only produced when the charged hadrons acquire an energy below the critical energy. The energy transfer for each component after $n$ generations is given as $E_{had} = \biggl(\frac{2}{3}\biggr)^n E_0$ and $E_{em} = \big[1- \biggl(  \frac{2}{3}\biggr)^n\big] \, E_0$. Deeply penetrating air showers i.e a primary with high energy and a low enough cross-section in air, results in a lower number of muons produced, and observed at ground. This fact is important as based on the ratio of muons to electrons observed at ground, the type of the primary can be estimated. The number of muons ($N_{\mu}$) can be estimated in this model directly from charged hadrons when their energy reaches below the critical energy. For $n$ generations $N_{\mu} = n_{ch}^n$ where $n_{ch}$ are the number of charged hadrons and $n$ can be written as $n = \frac{ln(E_0/E_c)}{ln(n_{tot})}$. Generalising by eliminating generations:
+The Heitler model was extended by Matthews~\cite{MATTHEWS2005387} to characterise the hadronic cascades in an EAS. In his approximation when a hadron with Energy E interacts with a nucleon the total particles produced have a two-third charged component ($\pi^\pm $) and a one-third neutral component ($\pi^0$) with the initial energy equally divided based on the number fraction. The neutral component decays quickly and contributes its share of energy to the electromagnetic component. The charged hadrons, provided they have not reached their critical energy in air ($\sim$20 GeV), interact again repeating the initial process. Muons are only produced when the charged hadrons acquire an energy below the critical energy. The energy transfer for each component after $n$ generations is given as $\mathrm{E_{had} = \biggl(\frac{2}{3}\biggr)^n E_0}$ and $\mathrm{E_{em} = \big[1- \biggl(  \frac{2}{3}\biggr)^n\big] \, E_0}$. Deeply penetrating air showers i.e a primary with high energy and a low enough cross-section in air, results in a lower number of muons produced, and observed at ground. This fact is important as based on the ratio of muons to electrons observed at ground, the type of the primary can be estimated. The number of muons ($N_{\mu}$) can be estimated in this model directly from charged hadrons when their energy reaches below the critical energy. For $n$ generations $N_{\mu} = n_{ch}^n$ where $n_{ch}$ are the number of charged hadrons and $n$ can be written as $\mathrm{n = \frac{ln(E_0/E_c)}{ln(n_{tot})}}$. Generalising by eliminating generations:
 
 \begin{equation}
-    N_{\mu} = \biggl(\frac{E_0}{E_c}\biggr)^{\alpha} , \, \alpha = \frac{\ln (n_{ch})}{\ln (n_{tot})}
+    \mathrm{N_{\mu} = \biggl(\frac{E_0}{E_c}\biggr)^{\alpha} , \, \alpha = \frac{\ln (n_{ch})}{\ln (n_{tot})}}
 \end{equation}
 
-All the parameters in this model need to be estimated using detailed simulations~\cite{PhysRevD.66.033011}. $\alpha$ has been estimated to be in the range 0.82...0.9. Other factors such as production of particles which do not decay such as baryon-anti-baryon pairs~\cite{Pierog:2006qv} can also affect the calculated values in this model. Other than the shower maximum and number of muons, the change of the depth of the shower maximum per decade in energy also called the elongation rate is given by $D_{10} = \frac{\left\langle X_{max}\right\rangle }{dlog_{10}E_0} = 2.3\lambda_r$. The elongation rate of electromagnetic showers in air is about $\approx 85g/cm^2$. The elongation rate theorem ~\cite{Linsley_1977} states that the upper limit to the elongation rate for hadronic showers is also $D_{10}^{em}$ in the presence of Feynman scaling.
+All the parameters in this model need to be estimated using detailed simulations~\cite{PhysRevD.66.033011}. $\alpha$ has been estimated to be in the range 0.82...0.9. Other factors such as production of particles which do not decay such as baryon-anti-baryon pairs~\cite{ Pierog:2006qv} can also affect the calculated values in this model. Other than the shower maximum and number of muons, the change of the depth of the shower maximum per decade in energy also called the elongation rate is given by $D_{10} = \frac{\left\langle X_{max}\right\rangle }{dlog_{10}E_0} = 2.3\lambda_r$. The elongation rate of electromagnetic showers in air is about $\approx 85g/cm^2$. The elongation rate theorem~\cite{Linsley_1977} states that the upper limit to the elongation rate for hadronic showers is also $D_{10}^{em}$ in the presence of Feynman scaling.
 
 The first interaction with the nucleon was presented in a simplified way by Matthews as the superposition model. In this model a nucleus with mass A is assumed to be a superposition of A independent nucleons, each with energy $E_h = E_0/A$. With such an assumption one can reach the following conclusions:
 
@@ -44,27 +59,41 @@ Although these models help understand the principle, a full Monte Carlo simulati
 
 \subsection{LPM effect}
 \label{subsec:LPM}
-Another process that can directly impact the development of high energy electromagnetic showers since it is the reduction of the bremmstrahlung and the pair-production cross-section is the Landau–Pomeranchuk–Migdal effect~\cite{Landau:1953um,PhysRev.103.1811}. All the above models work under the assumption that the energy range is low enough for the LPM effect to not be applicable. If the medium is dense enough or at high energies the LPM effect also becomes important to fully estimate the development of an air shower. The implications of the LPM effect for air showers implemented in simulations can be found in ~\cite{sandrock2023validationelectromagneticshowerscorsika}. 
+Another process that can directly impact the development of high energy electromagnetic showers since it is the reduction of the bremsstrahlung and the pair-production cross-section is the Landau-Pomeranchuk-Migdal effect~\cite{Landau:1953um,PhysRev.103.1811}. All the above models work under the assumption that the energy range is low enough for the LPM effect to not be applicable. If the medium is dense enough or at high energies the LPM effect also becomes important to fully estimate the development of an air shower. The implications of the LPM effect for air showers implemented in simulations can be found in~\cite{sandrock2023validationelectromagneticshowerscorsika}. 
 
 \subsection{Neutrino induced EAS}
 \label{sec:Dev_Nu}
-The development of a neutrino induced shower in comparison to a CR shower is important in the context of this study. Understanding the differences helps to identify the unique signature at a CR observatory like the Pierre Auger. The differences in the shower development can also help increase the sensitivity of a neutrino observatory like the IceCube. Unlike a cosmic ray particle a neutrino can interact at any depth. This is due to the low neutrino cross-section at $10^{18}$ $\approx 10^{-33} \mathrm{cm^2}$  in comparison, for e.g. the proton-nucleon cross-section which is $\approx 10^{-27} \mathrm{cm^2}$. Thus, neutrino-induced showers require significantly higher neutrino energies to produce interactions with observable effects. The main channel via which an ultra-high energy neutrino can interact is either a CC or NC interaction as mentioned in the last chapter. Neutrino-induced showers involve fewer particles in the initial interaction and often have a lower multiplicity of secondary particles compared to CR-induced showers. The development of the shower and the unique signature depend on the flavor of the neutrino as shown in fig~\ref{}.
+The development of a neutrino induced shower in comparison to a CR shower is important in the context of this study. Understanding the differences helps to identify the unique signature at a CR observatory like the Pierre Auger. The differences in the shower development can also help increase the sensitivity of a neutrino observatory like the IceCube. Unlike a cosmic ray particle a neutrino can interact at any depth. This is due to the low neutrino cross-section at $10^{18}$ $\approx 10^{-33} \mathrm{cm^2}$  in comparison, for e.g. the proton-nucleon cross-section which is $\approx 10^{-27} \mathrm{cm^2}$. Thus, neutrino-induced showers require significantly higher neutrino energies to produce interactions with observable effects. The main channel via which an ultra-high energy neutrino can interact is either a CC or NC interaction as mentioned in the last chapter. Neutrino-induced showers involve fewer particles in the initial interaction and often have a lower multiplicity of secondary particles compared to CR-induced showers. The development of the shower and the unique signature depend on the flavor of the neutrino as shown in fig~\ref{fig:NU_EAS_channels}.
+
+\begin{figure}[t!]
+    \centering
+    \includegraphics[width=14.5cm]{thesis_figures/EAS/Nu_EAS_channels.png}
+    \caption{Sketch of different possible interactions of UHE neutrinos in the atmosphere. } 
+    \label{fig:NU_EAS_channels}
+\end{figure}
 
 An electron neutrino, $\nu_e$, interacting via CC interaction produces an initial hadronic cascade which has fewer particles in comparison to a hadron-initiated shower from the CRs. The high energy electron/positron produced in the same initial interaction also produces an electromagnetic shower. At high energies the two showers are overlapped and the fraction of energy carried by the electron/positron governs the ratio of the electromagnetic to hadronic component for the shower.
 
 A muon neutrino, $\nu_{\mu}$, also produces an initial hadron cascade but in contrast to the electron neutrino interaction the resulting muon has a very low probability to decay and mostly passes through the detector undetected. The energy carried by the muon which is usually a large fraction is lost and only the hadronic cascade can be detected.
 
-Tau neutrinos, $\nu_{\tau}$, have a unique and particularly interesting signature even among neutrino showers. The initial interaction remains the same with the production of a hadronic cascade, but the resulting tau lepton has a decay length $\approx$ 10km. This means that depending on the depth of the atmosphere the tau encounters on its way to the ground, it can either decay and produce an electromagnetic cascade much later than the initial hadronic cascade or not decay at all. The asynchronous cascade signature is also known as "double-bang" effect and can occur both in air or a specific medium. Tau neutrinos can also be a source of upward-going air showers which can also be detected at an EAS detector. In this case the tau neutrinos can interact in the Earth's crust or in some natural obstruction like mountains around the detector leading to production of a hadronic cascade which gets absorbed and a tau lepton which can escape and produce an electromagnetic cascade in air that can be detected. The process is unique to tau neutrinos for an EAS detector since for an $\nu_e$ both the hadronic cascade and the electron is absorbed by the obstacle whereas for the muon neutrino the resulting muon is almost impossible to detect.  
+Tau neutrinos, $\nu_{\tau}$, have a unique and particularly interesting signature even among neutrino showers. The initial interaction remains the same with the production of a hadronic cascade, but the resulting tau lepton has a decay length $\approx$ 10 km. This means that depending on the depth of the atmosphere the tau encounters on its way to the ground, it can either decay and produce an electromagnetic cascade much later than the initial hadronic cascade or not decay at all. The asynchronous cascade signature is also known as "double-bang" effect and can occur both in air or a specific medium. Tau neutrinos can also be a source of upward-going air showers which can also be detected at an EAS detector. In this case the tau neutrinos can interact in the Earth's crust or in some natural obstruction like mountains around the detector leading to production of a hadronic cascade which gets absorbed and a tau lepton which can escape and produce an electromagnetic cascade in air that can be detected. The process is unique to tau neutrinos for an EAS detector since for a $\nu_e$ both the hadronic cascade and the electron is absorbed by the obstacle whereas for the muon neutrino the resulting muon is almost impossible to detect.  
 
 All three neutrino flavors can also undergo NC interactions. These also result in an initial hadronic cascade and a neutrino which usually does not interact and escapes being detected especially for an EAS detector. Thus, the signature is indistinguishable in comparison to a muon neutrino CC interaction. The probability of NC interaction is also lower than a CC interaction which also affects the overall number of EASs induced due to this channel.
 
 \section{Characteristics}
 \label{sec:EAS_cha}
-Apart from the shower maximum and the number of muons at ground other observables are also required to fully characterise the shower and estimate the important quantities such as the mass, energy and the arrival direction of the incoming primary CR or UHE$\nu$. Fig~\ref{} gives an overall picture of the evolution of an EAS in air. The amount of atmosphere penetrated is measured in units of slant depth X, with a unit of $\mathrm{g/cm^2}$. The first interaction depth, $X_0$, is the slant depth until the first interaction of the primary particle with the nucleon. The shower begins from this point on and the vector along which the shower develops from the first interaction point is called the \textit{shower axis}. The development continues till the shower reaches a maximum which was defined earlier and is denoted by $X_{max}$. After this point the shower depopulates which is caused by particle energy loss due to absorption or decay. The \textit{longitudinal development profile} plotted in fig~\ref{} gives a relation between the number of shower particle in dependence to the atmospheric depth. This relation is also called the Gaisser-Hillas function~\cite{1977ICRC....8..353G} parametrised as follows.
+Apart from the shower maximum and the number of muons at ground other observables are also required to fully characterise the shower and estimate the important quantities such as the mass, energy and the arrival direction of the incoming primary CR or UHE$\nu$. Fig.~\ref{fig:EAS_schematic} gives an overall picture of the evolution of an EAS in air. The amount of atmosphere penetrated is measured in units of slant depth X, with a unit of $\mathrm{g/cm^2}$. The first interaction depth, $X_0$, is the slant depth until the first interaction of the primary particle with the nucleon. The shower begins from this point on and the vector along which the shower develops from the first interaction point is called the \textit{shower axis}. The development continues till the shower reaches a maximum which was defined earlier and is denoted by $X_{max}$. After this point the shower depopulates which is caused by particle energy loss due to absorption or decay. The \textit{longitudinal development profile} plotted in fig~\ref{fig:EAS_schematic} gives a relation between the number of shower particle in dependence to the atmospheric depth. This relation is also called the Gaisser-Hillas function~\cite{1977ICRC....8..353G} parametrised as follows.
 
 \begin{equation}
     N(X) =  N_{max} \biggl(\frac{X- X_0}{X_{max} -  X_0}\biggr)^{\frac{X_{max}-X_0}{\lambda}} \exp \biggl(\frac{X_{max}-X_0}{\lambda}\biggr)
 \end{equation}
+
+\begin{figure}[t!]
+    \centering
+    \includegraphics[width=14.5cm]{thesis_figures/EAS/EAS_schematic.png}
+    \caption{Schematic of the development of an EAS in the atmosphere.} 
+    \label{fig:EAS_schematic}
+\end{figure}
 
 $X_0$ and $\lambda$ can be estimated by fitting the profile based on the above function and depend on the composition and energy of the primary. $N_{max}$ is the number of particles observed at $X_{max}$. The integral of the longitudinal development profile gives an estimate of the total calorimetric energy deposited by the shower. 
 The point where the shower axis vector intersects the ground is called the \textit{shower core}. Shower axis is thus defined by the zenith $\theta$, azimuth $\phi$ and the shower core position. If one looks at the shower head on the large thin disc like appearance consisting of highly energetic particles is called the \textit{shower front}. The shape is due to the path length differences between the shower particles travelling away from the shower axis to the one travelling in the direction of the shower axis. The disc is thus thinner near the shower core and widens away from it. As the shower front intersects the ground, the density and the timing of the particles detected at the detector form what is called the \textit{shower footprint}. It is the primary observable used by a ground level EAS detector to measure and characterise the shower. The arrival time of the particles in the footprint can help determine the shower geometry whereas the density can be used to reconstruct the energy of the primary. The density is estimated as a function of the radial distance from the shower core on the ground, by the \textit{lateral distribution function} (LDF). The modern LDF function is an extension on the parameterisation given by Greisen~\cite{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431} and by Kamata and Nishimura~\cite{10.1143/PTPS.6.93} and is given as:
@@ -73,14 +102,14 @@ The point where the shower axis vector intersects the ground is called the \text
     \rho_e(r) = \frac{N_e}{2 \pi R_M^2} C(s) \biggl(\frac{r}{R_M}\biggr)^{(s-2)}\biggl(\frac{r}{R_M}+1\biggr)^{(s-4.5)}
 \end{equation}
 
-with $s = \frac{3}{1+2 X_{max}/X}$ and the Moliere radius $R_M = 0.0265 X_0(Z + 1.2)$ \todo{Define other variables}. 
+with $s = \frac{3}{1+2 X_{max}/X}$ and the Moliere radius $R_M = 0.0265 X_0(Z + 1.2)$. \todo{Define other variables}. 
 
 
 Another important characteristic of an EAS are its universality features first pointed out by Hillas for electromagnetic showers~\cite{A_M_Hillas_1982}. In this formulation around the shower maximum the average development of an air shower is universal. An individual shower can be defined as a function of shower age, s, defined earlier give by:
 \begin{equation}
     s = \frac{3}{1+2 X_{max}/X}
 \end{equation}
-This feature is a result of the nature of the development of the cascade process which hides the initial primary dependent fluctuations~\cite{Fedosimova:2017vxz}. Simulations have used such a universal feature to fit shower profiles reasonably well independent of the primary mass and energy~\cite{Bridgeman:2017MD}. Air shower universality only holds for air showers induced by gamma rays, electrons, or positrons and breaks down for a hadronic cascade. It can still be used if each individual component of the shower can be disentangled. Although, not applicable for this study, Universality is an important characteristic of the shower and has been used to estimate the proton-air cross-secton~\cite{Ulrich_2009} and other CR studies~\cite{cazon2024protonairinteractionsultrahighenergies}.
+This feature is a result of the nature of the development of the cascade process which hides the initial primary dependent fluctuations~\cite{Fedosimova:2017vxz}. Simulations have used such a universal feature to fit shower profiles reasonably well independent of the primary mass and energy~\cite{Bridgeman:2017MD}. Air shower universality only holds for air showers induced by gamma rays, electrons, or positrons and breaks down for a hadronic cascade. It can still be used if each individual component of the shower can be disentangled. Although, not applicable for this study, Universality is an important characteristic of the shower and has been used to estimate the proton-air cross-section~\cite{Ulrich_2009} and other CR studies~\cite{cazon2024protonairinteractionsultrahighenergies}.
 
 \section{Detection}
 \label{sec:EAS_det}
@@ -94,6 +123,13 @@ The phenomenon of fluorescence emitted by air showers above $10^{17}$eV, known a
 \subsection{Cherenkov Detection}
 \label{sec:EAS_cher}
 Charged particles moving through the atmosphere can also produce Cherenkov light~\cite{Cherenkov:1934ilx}. The EAS can be either detected via Imaging Cherenkov telescopes (IACTs) which can detect showers between 20 GeV -100 TeV or non-imaging Cherenkov detectors can be set up akin to a ground based particle detector array. Both are techniques are used for both gamma-ray astronomy and CR studies. Since the Cherenkov cone is collimated around the shower axis the detectors need to be located with small spacing between them. For e.g. for a particle at 10 km height, the Cherenkov cone has a radius of 120 m. This property and the similar operational limitations akin to the fluorescence detection for the IACTs, makes this technique impractical to detect UHECRs. The currently operational experiments using the non-imaging Cherenkov technique for EAS detection include Yakutsk~\cite{DYAKONOV1986224} and Tunka~\cite{KUZMICHEV2020161830} etc. IACTs are very popular for gamma-ray astronomy and multimessenger detections with H.E.S.S.~\cite{Puhlhofer:2024fjx}, MAGIC~\cite{cortina2009technicalperformancemagictelescopes} and CTA~\cite{2018_CTAO} currently operational. 
+
+\begin{figure}[t!]
+    \centering
+    \includegraphics[width=14.5cm]{thesis_figures/EAS/EAS-Detection-Techniques.png}
+    \caption{Sketch of various ways to study experimentally extensive air showers.~\cite{article_2001_kampert}} 
+    \label{fig:EAS_det_techniques}
+\end{figure}
 
 \subsection{Radio Detection}
 \label{sec:EAS_rad}
